# databricks-hackathon-2025-babygpt

./: .gitignore  AGENTS.md  Desired System Prompt.md  README.md
backend/: .env.example  DatabricksClient.py  agent_manager.py  chat_graph_manager.py  databricks-notebook-export.py  main.py  plan_manager.py  pyproject.toml  streamlit_app.py  test2.py
